--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 dj-database-url==0.4.1
 dj-static==0.0.6
 Django==1.9
+django-localflavor==1.4.1
 #sudo apt-get install python3.5-dev
 #http://tecadmin.net/install-python-3-5-on-ubuntu/#
 psycopg2==2.6.2
 python-decouple==3.0
 static3==0.7.0
 django-test-without-migrations==0.4
-django-municipios==0.8.1
+#django-municipios==0.8.1
 django-bootstrap-toolkit==2.15.0
 Pillow==3.4.2
 pytz
