ref #22 e #23 localbr funcionando, mas tem coisas a fazer para poder usar a app em produção, 'localbr tem importaçãoes não comtíveis com django 1.9 ou maior e 'smart_unicode' não é compatível com python 3

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ django-test-without-migrations==0.4
 django-bootstrap-toolkit==2.15.0
 Pillow==3.4.2
 pytz
+-e git://github.com/znc-sistemas/django-localbr.git@1.1#egg=localbr-dev
