--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,8 @@ python-decouple==3.0
 static3==0.7.0
 django-test-without-migrations==0.4
 #django-municipios==0.8.1
-django-bootstrap-toolkit==2.15.0
+
+django-bootstrap3==9.0.0
 Pillow==3.4.2
 pytz
--e git://github.com/znc-sistemas/django-localbr.git@1.1#egg=localbr-dev
+#-e git://github.com/znc-sistemas/django-localbr.git@1.1#egg=localbr-dev
