--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,55 @@
-.env
-*.sqlite3
+*.py[cod]
+
 *pyc
-__pycache__
-db.sqlite3
-local_settings.py
+
+# C extensions
+*.so
+
+# Packages
+*.egg
+*.egg-info
+
+env
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+.idea
+
+#geral
 staticfiles
+.env
+.enve
+settings_local.py
+local_settings.py
+*.sublime-project
+*.sublime-workspace
+*.db
+*.sqlite3
+dump
+*~
+*/media/*
 media
